--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,15 @@
   "name": "groupon-frontend-coding-challenge",
   "version": "0.2.0",
   "dependencies": {
-    "jquery": "~1.11.3",
-    "requirejs": "~2.1.9",
-    "requirejs-text": "~2.0.10",
-    "underscore": "~1.8",
     "backbone": "~1.1.0",
     "jade": "~1.10.0",
+    "jquery": "~1.11.3",
+    "mapbox.js": "~2",
+    "moment": "~2.10.6",
     "react": "~0.13.3",
-    "mapbox.js": "~2"
+    "requirejs": "~2.1.9",
+    "requirejs-text": "~2.0.10",
+    "underscore": "~1.8"
   },
   "devDependencies": {}
 }
